# CTE2

./: README.md  pyproject.toml
cte2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cte2/cte/: __init__.py  fc2.py  harmonic.py  preprocess.py  qha.py
cte2/mlip/: calc.py  postprocess.py  preprocess.py  relax.py
cte2/scripts/: __init__.py  cte2_fc2.py  cte2_harmonic.py  cte2_mlip.py  cte2_qha.py  cte2_run.py  cte2_vasp.py
cte2/util/: argparser.py  calc.py  calc_loader.py  config.py  cte2_script.py  io.py  logger.py  parse_calc_config.py  relax.py  utils.py
cte2/vasp/: config.yaml  io.py  postprocess.py  preprocess.py
example/: mlip_config.yaml  params.py  plot.py
test/: pright.x  pyright.sh  pyrightconfig.json  run.sh  test_config.py  test_cte2_fc2.py  test_cte2_harmonic.py  test_cte2_mlip.py  test_cte2_qha.py  test_cte2_run.py  test_cte2_vasp.py  test_scripts.py
test/Al-VASP/: config.yaml
test/Al-VASP/deform/: deformed.extxyz
test/Al-VASP/deform/e--2/: CONTCAR  OUTCAR  POSCAR  stdout.x  vasprun.xml
test/Al-VASP/deform/e--4/: CONTCAR  OUTCAR  POSCAR  stdout.x  vasprun.xml
test/Al-VASP/phonon/: INCAR
test/Al-VASP/unitcell/: CONTCAR  INCAR  OUTCAR  POSCAR  vasprun.xml
test/cte/: harmonic.py  qha.py
test/debug/: pyright.json
test/scripts/: cte2_cte.py  cte2_fc2.py  cte2_mlip.py  cte2_qha.py  cte2_vasp.py
test/test-input/: cte2_config.yaml  mlip_config.yaml  ompa_config.yaml  vasp_config_back.yaml  zero_config.yaml
test/util/: logger.py  relax.py  utils.py
test/vasp/: io.py  preprocess.py
(+17 files in other folders)
